
===============
Version 0.13.0
===============

* Added XPath interfaces and initial implementation based on libxml2
* Removed old DOM1 implementation on xNode/xDocument
* API change on DomImplementation.with_ids () for DocumentType to DomDocumentType
* API change changed long/ulong to int
* Added new DOM4 implementation called GOM

===============
Version 0.12.0
===============

* Fixed vapi installation, honoring vala pc file
* Fixed Bug #760568
* Fixed Bug #769363
* Simplified documentation generation using just --enable-docs
* Removed Node.childs
* DOM4 implementation:
    API Changes:
        * Node.children now is Node.children_nodes
        * Element.set_ns_attr now use string for namespace, considering if prefix is included in URI.
    API Addintions:
        * DOM4 interfaces
        * DOM4 collection implementations
        * Node: get_elements_by_name (), get_elements_by_name_ns ()
    Implementations:
        * GNode series implement DOM4 interfaces
    Deprecations:
        * xNode/xDocument type classes now are deprecated, they use an old DOM1 API
* New and updated translations:
    Updated Serbian     by Мирослав Николић <miroslavnikolic@rocketmail.com>
    Updated Czech       by Marek Černocký <marek@manet.cz>
    Updated Polish      by Piotr Drąg <piotrdrag@gmail.com>
    Updated Hungarian   by Balázs Meskó <meskobalazs@gmail.com>
    Updated Spanish     by Daniel Mustieles <daniel.mustieles@gmail.com>
    Added Indonesian    by Andika Triwidada <atriwidada@gnome.org>
    Updated Brazilian Portuguese by Enrico Nicoletto <liverig@gmail.com>
* TNode based classes API changes:
    * TDocument.read_doc_stream() now throws GLib.Error
* Reducing number of warnings at valac compilation time
* Bump version of required VALAC to 0.32, due to use of [Version] annotation
* Updated Debian packaging by Yannick Inizan <inizan.yannick@gmail.com>

===============
Version 0.10.0
===============

* New and updated translations: