@@ -33,7 +33,7 @@ public enum GXml.NodeType { // TODO: Rename to DomNodeType
 	/* NOTE: bug in vala?  if I don't have == 0, I fail when creating
 	   this class because I can't set default values for NodeType properties
 	   GLib-GObject-CRITICAL **: g_param_spec_enum: assertion `g_enum_get_value (enum_class, default_value) != NULL' failed */
-	X_UNKNOWN = 0,
+	INVALID = 0,
 	ELEMENT = 1,
 	ATTRIBUTE,
 	TEXT,
